// Vitest Snapshot v1

exports[`<IndexChange /> > should render 1`] = `
<Styled(BoxSpaced)>
  <strong>
    bar
  </strong>
  foo
</Styled(BoxSpaced)>
`;

exports[`<IndexChange /> > should render when [otuName=null] 1`] = `
<Styled(BoxSpaced)>
  <strong />
  foo
</Styled(BoxSpaced)>
`;
